# ChessGame

ChessGame/ChessGame/: BishopLogic.cpp  BishopLogic.h  CMakeLists.txt  GamePiecesLogic.cpp  GamePiecesLogic.h  KingLogic.cpp  KingLogic.h  KnightLogic.cpp  KnightLogic.h  MainBoard.cpp  MainBoard.h  PawnLogic.cpp  PawnLogic.h  QueenLogic.cpp  QueenLogic.h  RookLogic.cpp  RookLogic.h  main.cpp
